--- a/Ansible/docker.yaml
+++ b/Ansible/docker.yaml
@@ -8,12 +8,12 @@
         update_cache: yes   
 
     - name: Build Docker Image
-      command: docker build -t petstore .
+      command: docker build -t petshop .
       args:
         chdir: /var/lib/jenkins/workspace/petstore
 
     - name: tag image
-      command: docker tag petstore:latest jswetha1234/petstore:latest 
+      command: docker tag petshop:latest jswetha1234/petshop:latest 
 
     - name: Log in to Docker Hub
       community.docker.docker_login:
@@ -22,7 +22,7 @@
         password: swetha12345678
 
     - name: Push image
-      command: docker push jswetha1234/petstore:latest
+      command: docker push jswetha1234/petshop:latest
 
     - name: Run container
-      command: docker run -d --name pet1 -p 8081:8080 jswetha1234/petstore:latest
+      command: docker run -d --name pet1 -p 8081:80 jswetha1234/petshop:latest
